grammar
$ the whole program is a list of block statements
root:
  [<stmt>:BLOCK]

stmt:
  <assignment>
  <cond_stmt>
  <loop_stmt>
  <type_def>
  <func_call>
  <match_tag_union>
  $TODO : include load and loadC statements
  <embed_c>
  "back" <expr>
  "skip"
  "skip" NAME
  "stop"
  "stop" NAME

assignment:
  ?("const") <primary> ?("::" <some_type>) "=" <expr>
  "var" <primary> "::" <some_type> "=" <expr>

cond_stmt:
  "if" <expr> "|" <body>
  "else" "if" <expr> "|" <body>
  "else" "|" <body>

$ the optional NAME and ":" can be used on skip and stop to refer to other loop besides the current
loop_stmt:
  ?(NAME ":") "while" <expr> "|" <body>
  ?(NAME ":") "loop" "|" <body>           $ infinity loop, only exits when stopped

type_def:
  "type" NAME "|" <some_type>             $ defining an alias to a type

func_call:
  NAME "(" [<expr>:","] ")"
  "@" <primary> "(" [<expr>:","] ")"
  <primary> "@" NUMBER "(" [<expr>:","] ")"
  NAME "." <primary> "(" [<expr>:","] ")"

match_tag_union:
  "match" <primary> "|" [<match_branch>:BLOCK]

match_branch:
  <name> "|" <body>

embed_c:
  "embed" C_CODE

body:
  <stmt>
  [<stmt>:BLOCK]

expr:
  "(" <expr> ")"
  <expr> "?" <expr> ":" <expr>       $ ternary
  "fn" [<name>:","] ?("=>" <some_type>) "|" <body>       $ function definition
  "[" [<expr>:","] "]"                                   $ array creation
  "{" [<expr>:","] "}"                                   $ tupple creation
  <primary>
  <bitwise>
  <parse>
  <func_call>

bitwise:
  <bitwise> "band" <bitwise>
  <bitwise> "bor" <bitwise>
  <bitwise> "shl" <num>
  <bitwise> "shr" <num>
  "bnot" <bitwise>
  <boolean>

boolean:
  <boolean> "and" <boolean>
  <boolean> "or" <boolean>
  <boolean> ">" <boolean>
  <boolean> ">=" <boolean>
  <boolean> "==" <boolean>
  <boolean> "!=" <boolean>
  <boolean> "<" <boolean>
  <boolean> "<=" <boolean>
  "not" <boolean>
  <num>

num:
  <num> "+" <term>
  <num> "-" <term>
  <term>

term:
  <term> "*" <factor>
  <term> "/" <factor>
  <term> "%" <factor>
  <factor>

factor:
  "-" <factor>
  "(" <expr> ")"
  <primary>                       $ TODO: remove this, already been treated at atom first rule
  <atom>

primary:
  <primary> "." <primary>            $ field access
  <primary> "." <num>                $ field access of tupples
  "@" <primary>                        $ dereference pointer
  <primary> "@" <num>                     $ dereference pointer with some offset
  NAME

name:
  NAME
  <name> "::" <some_type>

atom:
  ?("#") <primary>                        $ reference to a name(declaration)
  <comptime_val>

comptime_val:
  NUMBER
  CHAR
  STRING

parse:
  <expr> "::" <some_type>

field: 
  NAME "::" <some_type> ?("=" <comptime_val>) $ TODO: use this kind of construction for struct with fields

some_type:
  ?("#") "(" <some_type> ")"
  <func_type>

func_type:
  <some_type> "->" <some_type>               $ functions types
  "(" <some_type> "->" <some_type> ")"       $ functions types
  "(" <some_type> ")" "->" "(" <some_type> ")"       $ functions types
  <tupple_type>

tupple_type:
  <tupple_type> "&" <tupple_type>            $ tupples
  "(" <tupple_type> "&" <tupple_type> ")"    $ tupples
  "(" <tupple_type> ")" "&" "(" <tupple_type> ")"    $ tupples
  <tag_type>

tag_type:
  <tag_type> "^" <tag_type>                  $ tagged union types
  "(" <tag_type> "^" <tag_type> ")"          $ tagged union types
  "(" <tag_type> ")" "^" "(" <tag_type> ")"          $ tagged union types
  <basic_type>

basic_type:
  "(" <some_type> ")"
  "#" <some_type>                 $ pointer to a type
  "?" <some_type>                 $ nullable pointer to a type
  "#" "[" NUMBER "]" <some_type>  $ array of NUMBER elements
  "#" "*" <some_type>             $ pointer to an array null terminated
  "byte"                     $ signed 1-byte
  "ubyte"                    $ unsigned 1-byte
  "int"                      $ signed 4-bytes
  "uint"                     $ unsigned 4-bytes
  "none"                     $ void type, nothing to return
  NAME                       $ user types
